Primeiro commit , novo portfolio-angular

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+/* .dark .bg-gray-900{
+    background-color: #1a202c;
+}
+
+.dark .text-white{
+    color: #fff;
+}
+
+body{
+    margin: 0;
+    overflow-x: hidden;
+} */
