--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -26,6 +26,7 @@
             <!-- Menu de Navegação (Visível apenas em telas grandes) -->
             <nav class="hidden md:flex space-x-6">
                 <a href="#sobre" class="hover:text-gray-300 transition duration-300">Sobre</a>
+                <a href="#skills" class="hover:text-gray-300 transition duration-300">Habilidades</a>
                 <a href="#projetos" class="hover:text-gray-300 transition duration-300">Projetos</a>
                 <a href="#contato" class="hover:text-gray-300 transition duration-300">Contato</a>
             </nav>
@@ -38,8 +39,10 @@
       <h2 class="text-2xl font-bold mb-6">Menu</h2>
       <ul class="space-y-4">
         <li><a href="#sobre" (click)="closeMenu()" class="hover:text-gray-300 transition duration-300 block">Sobre</a></li>
+        <li><a href="#skills" (click)="closeMenu()" class="hover:text-gray-300 transition duration-300 block">Habilidades</a></li>
         <li><a href="#projetos" (click)="closeMenu()" class="hover:text-gray-300 transition duration-300 block">Projetos</a></li>
         <li><a href="#contato" (click)="closeMenu()" class="hover:text-gray-300 transition duration-300 block">Contato</a></li>
+        
       </ul>
     </div>
   </div>
